--- a/app/views/backend/sales/_form.html.haml
+++ b/app/views/backend/sales/_form.html.haml
@@ -13,7 +13,7 @@
   -association :nature
   -association :responsible, :source => :employees, :new => {:employed => 1}
   -association :transporter, :source => :transporters
-  -input :comment
+  -input :description
   -input :letter_format, :show => :letter_options
 
 =field_set :letter_options do
