--- a/app/views/layouts/dialog.html.haml
+++ b/app/views/layouts/dialog.html.haml
@@ -1,3 +1,15 @@
-=heading_tag
-=notifications_tag
-=yield
+-# coding: UTF-8
+!!! 5
+%html{:xmlns => "http://www.w3.org/1999/xhtml", :dir => t("i18n.dir"), :lang => t("i18n.iso2"), "xml:lang" => t("i18n.iso2"), :class => "backend true-dialog"}
+  %head
+    %link{:rel => "icon", :type => "image/png", :href => image_path("favicon.png")}
+    =meta_viewport_tag
+    =title_tag
+    =csrf_meta_tags
+    =stylesheet_link_tag :application
+    =theme_link_tag(@current_theme)
+    =javascript_include_tag :application
+  %body
+    =heading_tag
+    =notifications_tag
+    =yield
