--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -1,3 +1,19 @@
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video, input, textarea, select, options {
+  margin:0;
+  padding:0;
+  font-family: $base-font-family;
+  vertical-align: middle;
+  font-size: $fs-normal;
+  color: $text-color;
+  @include text-align(left);
+}
+
+td, th, a, p, input, textarea, select, div { font-size: $fs-normal;}
+small, sup, sub { font-size: $fs-small; }
+a:link, a:visited, a:focus { color: $link-color; text-decoration: none;}
+// a:hover { color: $link-color; text-decoration: underline;}
+
+
 #top {
   margin-bottom: $fs-normal;
 }
@@ -17,14 +33,30 @@ html {
       #main {
         @include column(10);
         height: 100%;
-        h1 {
-          &, & * { font-size: $fs-very-huge; }
+        #header {
+          h1 {
+            &, & * {
+              font-size: $fs-very-huge;
+              line-height: round(1.6 * $fs-very-huge);
+	      vertical-align: middle;
+            }
+          }
         }
       }
     }
   }
 }
 
+
+	  #main-toolbar {
+            @include button-group();
+	    @include float(right);
+            margin-top: 0;
+            .btn {
+              .icon { margin: 0; }
+	      .text { display: none; }
+	    }
+	  }
 
 .attributes-list {
   @include column-count(3);
@@ -376,6 +408,152 @@ span.rad, label.radio {
   height: 90%;
   overflow: auto;
 }
+
+.ui-dialog {
+  position: absolute;
+  background: $menu-background;
+  border: 2px solid $base-color;
+  @include box-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+  overflow: hidden;
+  .ui-dialog-titlebar {
+    padding: 4px;
+    //height: 16px;
+    background: $base-color;
+    .ui-dialog-title {
+      margin: 4px;
+      font-weight: bold;
+      font-size: $fs-large;
+      color: white;
+      @include text-shadow(0 0 3px rgba(0,0,0,0.5));
+    }
+    .ui-dialog-titlebar-close {
+      float: right;
+      span {
+        display: block;
+        @include squish-text;
+        @include icons-sprite(close);
+        height: 16px;
+        width: 16px;
+      }
+      &:hover, &:focus { padding: 0; }
+    }
+  }
+  .ui-dialog-content {
+    clear: both;
+    position: relative; border: 0; padding: .5em 1em; background: none; overflow: auto; zoom: 1; }
+  .ui-dialog-buttonpane {
+    text-align: left; border-width: 1px 0 0 0; background-image: none; margin: .5em 0 0 0; padding: .3em 1em .5em .4em;
+    .ui-dialog-buttonset { float: right; }
+    button { margin: .5em .4em .5em 0; cursor: pointer; }
+  }
+  .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; }
+}
+
+.ui-widget-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparentize($base-color, 0.8);
+}
+
+
+.items-menu {
+  position: absolute;
+  @include float(left);
+  background: white;
+  border: 1px solid #AAA;
+  z-index: 2;
+  .items-list {
+    max-height: 400px;
+    min-width: 350px;
+    overflow-y: auto;
+    li {
+      padding: 8px;
+      *, & * { vertical-align: baseline; }
+      strong { font-weight: bold }
+      &.selected {
+        background: rgba($base-color, 0.2);
+        cursor: pointer;
+      }
+    }
+  }
+  .items-status {
+    display: block;
+    padding: 8px;
+    background: #EFE;
+    font-style: italic;
+  }
+}
+
+.control-group.hidden {
+  display: none;
+}
+.nested-fields {
+  position: relative;
+  .nested-remove {
+    @include float(right);
+    position: absolute;
+    @include right(0);
+    @include icons-sprite(destroy);
+    @include display(block);
+    width: 16px;
+    height: 16px;
+    @include hide-text();
+  }
+}
+.links {
+  margin-bottom: $fs-normal;
+  .nested-add {
+    @include margin-left($controls-margin-left);
+  }
+}
+
+
+.affair {
+  .deals {
+    //@include padding-left(4em);
+    width: 100%;
+    border-collapse: collapse;
+    border: none;
+    padding: 0;
+    margin: 0;
+    tr {
+      list-style-type: decimal;
+      &, & * {
+        font-size: $fs-normal;
+	line-height: round($fs-normal*1.4);
+	vertical-align: baseline;
+      }
+      .dealt-on { width: 16ex; }
+      .amount {
+        @include text-align(right);
+        &.credit { 
+	  &, & * { color: red }
+	}
+        &.debit { 
+          &, & * { color: green }	  
+	}
+        &, & * {
+          font-weight: bold;
+        }
+      }
+    }
+    tfoot.total {
+      &, & * { 
+        @include text-align(right);
+        font-weight: bold;        
+        background: none;
+      }
+      .sum {
+        border-top: 1px solid #777;
+      }
+    }
+  }
+    
+}
+
 
 
 /* Pop overs */
