--- a/app/views/backend/sale_items/_detail_row_form.html.haml
+++ b/app/views/backend/sale_items/_detail_row_form.html.haml
@@ -1,18 +1,18 @@
--if product = @sale_line.product
+-if product = @sale_item.product
   %table
     %tr
-      %td=SaleLine.human_attribute_name("quantity")
+      %td=SaleItem.human_attribute_name("quantity")
       -if current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
-        %td=SaleLine.human_attribute_name("reduction_percentage")
+        %td=SaleItem.human_attribute_name("reduction_percentage")
       -if product.stockable
-        %td=SaleLine.human_attribute_name("stock")
+        %td=SaleItem.human_attribute_name("stock")
     %tr
       %td
-        =text_field(:sale_line, :quantity, :size=>5)
+        =text_field(:sale_item, :quantity, :size=>5)
         =product.unit.label
       -if current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
-        %td=text_field(:sale_line, :reduction_percentage, :size=>5)
+        %td=text_field(:sale_item, :reduction_percentage, :size=>5)
       -if product.stockable
-        %td=select(:sale_line, :stock_id, product_stocks_options(product))
+        %td=select(:sale_item, :stock_id, product_stocks_options(product))
   -if product.nature == "subscrip"
     .count=product.default_subscription_label_for(@sale.client)
