--- a/app/views/backend/sale_items/_form.html.haml
+++ b/app/views/backend/sale_items/_form.html.haml
@@ -15,14 +15,13 @@
   -association :unit, :readonly => true, :depend_on => :price, :value => "product.unit".to_sym
   -input :annotation
 
-=field_set :stock, :depend_on => :price, :if => :stockable? do
+-#=field_set :stock, :depend_on => :price, :if => :stockable? do
   -association :warehouse
   -association :tracking, :depend_on => :warehouse, :if => :trackable?
 
 =field_set :subscriptions do
   -nested_association :subscriptions, :depend_on => :price, :if => :subscription? do
     -association :address
-    -input :comment
     -input :started_on, :if => "product.subscription_nature.period?".to_sym
     -input :stopped_on, :if => "product.subscription_nature.period?".to_sym
     -input :first_number, :if => "product.subscription_nature.quantity?".to_sym
