--- a/app/views/backend/product_nature_categories/_form.html.haml
+++ b/app/views/backend/product_nature_categories/_form.html.haml
@@ -1,7 +1,7 @@
 -# TODO Manage soft_copy_to
 -field_set do
   -input :name, :soft_copy_to => :catalog_name
-  -input :comment
+  -input :description
   -association :parent
 
 -field_set(:catalog) do
