--- a/app/views/backend/areas/_form.html.haml
+++ b/app/views/backend/areas/_form.html.haml
@@ -2,4 +2,4 @@
   =f.association :district
   =f.input :name
   =f.input :code
-  =f.input :country, :source => :countries
+  =f.input :country, :collection => countries
