--- a/app/views/backend/custom_fields/_form.html.haml
+++ b/app/views/backend/custom_fields/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.input :used_with
+  =f.input :customized_type
   =f.input :name
   =f.input :nature, :show => {:decimal => :decimal_options, :string => :string_options, :choice => :choice_options}
   =f.input :active
