--- a/app/views/backend/document_templates/_form.html.haml
+++ b/app/views/backend/document_templates/_form.html.haml
@@ -6,7 +6,7 @@
   =f.input :to_archive
   =f.input :by_default
   =f.input :active
-  =f.input :language, :source => :languages
-  =f.input :country,  :source => :countries
+  =f.input :language, :collection => languages
+  =f.input :country,  :collection => countries
   =f.input :filename
   =f.input :source, :field => :text
