--- a/app/views/backend/entity_addresses/_form.html.haml
+++ b/app/views/backend/entity_addresses/_form.html.haml
@@ -9,4 +9,4 @@
   =f.input :mail_line_4, :in => :mail_details
   =f.input :mail_line_5, :in => :mail_details
   =f.input :mail_line_6, :in => :mail_details
-  =f.input :mail_country, :source => :countries, :in => :mail_details
+  =f.input :mail_country, :collection => countries, :in => :mail_details
