--- a/app/views/backend/inventories/_form.html.haml
+++ b/app/views/backend/inventories/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do
   =f.association :responsible, :source => :employees
   =f.input :description
-  -partial :items
+  =render :partial => "items"
 
 
