--- a/app/views/backend/land_parcels/_form.html.haml
+++ b/app/views/backend/land_parcels/_form.html.haml
@@ -2,7 +2,7 @@
   =f.input :name
   =f.input :number
   =f.input :description, :field => :text
-  =f.input :started_on
+  -#=f.input :started_on
   =f.input :area_measure
   =f.association :group
   =f.association :area_unit
