--- a/app/views/backend/outgoing_payments/_form.html.haml
+++ b/app/views/backend/outgoing_payments/_form.html.haml
@@ -8,4 +8,4 @@
 =field_set(:depositable_options) do
   =f.association :responsible, :source => :employees
   =f.input :paid_on
-  =f.input :check_number
+  =f.input :bank_check_number
