--- a/app/views/backend/product_nature_prices/_amount_form.html.haml
+++ b/app/views/backend/product_nature_prices/_amount_form.html.haml
@@ -1,4 +1,4 @@
 =f.association :category
 =f.input :pretax_amount
 =f.association :tax
-=f.input :currency, :source => :currencies
+=f.input :currency, :collection => currencies
