--- a/app/views/backend/purchase_items/_form.html.haml
+++ b/app/views/backend/purchase_items/_form.html.haml
@@ -4,11 +4,11 @@
   =f.association :product, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
   =f.input :quantity
   =f.input :annotation
-  -nested_association :price do
+  =nested_association :price do
     =f.association :category
     =f.input :pretax_amount
     =f.association :tax
-    =f.input :currency, :source => :currencies
+    =f.input :currency, :collection => currencies
 
 =field_set :stocks, :depend_on => :product, :if => :stockable? do
   =f.association :warehouse
