--- a/app/views/backend/sales/show.html.haml
+++ b/app/views/backend/sales/show.html.haml
@@ -82,7 +82,7 @@
         -if @sale.draft?
           =toolbar do |t|
             -for item in @sale.items.includes(:product, :reduction_origin)
-              -if item.product.subscription? and not item.reduction_origin
+              -if item.product.nature.subscription? and not item.reduction_origin
                 -t.link :add_subscription_for_sale_item, {:action => :new, :controller => :subscriptions, :sale_item_id => item.id, :nature_id => item.product.subscription_nature_id}, :i18n => {:position => item.position}
         =list :subscriptions
 
