--- a/app/views/backend/entity_link_natures/_form.html.haml
+++ b/app/views/backend/entity_link_natures/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do
   =f.input :name
   =f.input :symmetric, :hide => :name_2_to_1
-  =f.input :propagate_contacts
+  =f.input :propagate_addresses
   =f.input :name_1_to_2
   =f.input :name_2_to_1
