--- a/app/views/backend/financial_years/_form.html.haml
+++ b/app/views/backend/financial_years/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do
   =f.input :code
-  =f.input :currency, :source => :currencies
+  =f.input :currency, :collection => currencies
   =f.input :started_on
   =f.input :stopped_on
 
