--- a/app/views/backend/incoming_payments/_form.html.haml
+++ b/app/views/backend/incoming_payments/_form.html.haml
@@ -8,6 +8,6 @@
 =field_set(:depositable_options) do
   =f.association :responsible, :source => :employees
   =f.input :paid_on
-  =f.input :check_number
-  =f.input :account_number
-  =f.input :bank
+  =f.input :bank_check_number
+  =f.input :bank_account_number
+  =f.input :bank_name
