--- a/app/views/backend/incoming_payments/show.html.haml
+++ b/app/views/backend/incoming_payments/show.html.haml
@@ -1,25 +1,27 @@
 =toolbar do |t|
   -t.edit @incoming_payment
 
-=attributes_list(@incoming_payment) do |l|
-  -l.attribute :number
-  -l.attribute :amount
-  -l.attribute :used_amount
-  -l.attribute :payer, :label=>:full_name, :url=>true
-  -l.attribute :responsible, :label=>:label
-  -l.attribute :deposit, :url=>true
-  -l.attribute :mode
-  -l.attribute :commission_amount
-  -l.attribute :commission_account, :url=>true
-  -l.attribute :paid_on
-  -l.attribute :to_bank_on
-  -l.attribute :received
-  -l.attribute :scheduled
-  -l.attribute :bank
-  -l.attribute :account_number
-  -l.attribute :check_number
-  -l.attribute :journal_entry, :url=>true
+=beehive do |b|
+  -b.cell do
+    =attributes_list(@incoming_payment) do |l|
+      -l.attribute :number
+      -l.attribute :amount, :currency => true
+      -l.attribute :payer, :label=>:full_name, :url=>true
+      -l.attribute :responsible, :label=>:label
+      -l.attribute :deposit, :url=>true
+      -l.attribute :mode
+      -l.attribute :commission_amount
+      -l.attribute :commission_account, :url=>true
+      -l.attribute :paid_on
+      -l.attribute :to_bank_on
+      -l.attribute :received
+      -l.attribute :scheduled
+      -l.attribute :bank_name
+      -l.attribute :bank_account_number
+      -l.attribute :bank_check_number
+      -l.attribute :journal_entry, :url=>true
 
--if @incoming_payment.sales.count > 0
-  %h2=tc(:sales)
-  =list :sales
+  -b.cell tc(:affair) do
+    =affair_of(@incoming_payment)
+
+    
