--- a/app/views/backend/journals/_form.html.haml
+++ b/app/views/backend/journals/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
   =f.input :name
   =f.input :code
-  =f.input :currency, :source => :currencies
+  =f.input :currency, :collection => currencies
   =f.input :nature
