--- a/app/views/backend/observations/_form.html.haml
+++ b/app/views/backend/observations/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :entity
+  -#=f.association :entity
   =f.input :importance
-  =f.input :description, :field => :text
+  =f.input :content, :field => :text
 
