--- a/app/views/backend/outgoing_payments/show.html.haml
+++ b/app/views/backend/outgoing_payments/show.html.haml
@@ -1,25 +1,18 @@
 =toolbar do |t|
   -t.edit @outgoing_payment
 
-=attributes_list(@outgoing_payment) do |l|
-  -l.attribute :number
-  -l.attribute :amount
-  -l.attribute :used_amount
-  -l.attribute :payee, :label=>:full_name, :url=>true
-  -l.attribute :responsible, :label=>:label
-  -l.attribute :mode
-  -l.attribute :paid_on
-  -l.attribute :to_bank_on
-  -l.attribute :check_number
-  -l.attribute :journal_entry, :url=>true
+=beehive do |b|
+  -b.cell do
+    =attributes_list(@outgoing_payment) do |l|
+      -l.attribute :number
+      -l.attribute :amount
+      -l.attribute :payee, :label=>:full_name, :url=>true
+      -l.attribute :responsible, :label=>:label
+      -l.attribute :mode
+      -l.attribute :paid_on
+      -l.attribute :to_bank_on
+      -l.attribute :bank_check_number
+      -l.attribute :journal_entry, :url=>true
 
--if false # @outgoing_payment.unused_amount > 0
-  =form_tag(:action=>:create, :controller=>:outgoing_payment_uses) do
-    %fieldset
-      %legend=tc(:add_purchase)
-      =render :partial=>"outgoing_payment_uses/_form"
-      .actions=submit_tag
-
--if @outgoing_payment.purchases.count > 0
-  %h2=tc(:purchases)
-  =list :purchases
+  -b.cell tc(:affair) do
+    =affair_of(@outgoing_payment)
