--- a/app/views/backend/roles/_form.html.haml
+++ b/app/views/backend/roles/_form.html.haml
@@ -1,3 +1,3 @@
 =field_set do
   =f.input :name
-  -partial :rights, :with => 'users/rights_form'
+  =render :partial => "backend/users/rights_form"
