--- a/app/views/backend/warehouses/show.html.haml
+++ b/app/views/backend/warehouses/show.html.haml
@@ -17,7 +17,7 @@
         -l.attribute :quantity_max
 
   -b.tabbox do
-    -b.cell :stocks do
+    -#b.cell :stocks do
       =list(:stocks)
-    -b.cell :stock_moves do
+    -#b.cell :stock_moves do
       =list(:stock_moves)
